--- a/tutorial_TeX/RB_PosteriorPrediction_Lyndon_Tutorial/pps.bib
+++ b/tutorial_TeX/RB_PosteriorPrediction_Lyndon_Tutorial/pps.bib
@@ -35,7 +35,8 @@
   number      =  3,
   pages       = "306--314",
   month       =  sep,
-  year        =  1994
+  year        =  1994,
+  language    = "en"
 }
 
 @ARTICLE{Hasegawa1985-ir,
@@ -68,7 +69,8 @@
   volume   =  22,
   number   =  2,
   pages    = "160--174",
-  year     =  1985
+  year     =  1985,
+  language = "en"
 }
 
 @ARTICLE{Tavare1986-ij,
@@ -199,5 +201,6 @@
   number      =  7,
   pages       = "1171--1180",
   month       =  jul,
-  year        =  2002
+  year        =  2002,
+  language    = "en"
 }
